# VLSIGR

./: .gitignore  Makefile  README.md  gtest  ispdData.h  ispd_data.cpp
.github/workflows/: ci.yml
examples/: complex.gr
python/: CMakeLists.txt  README.md  pyproject.toml
python/src/: bindings.cpp
python/tests/: test_api_smoke.py
python/vlsigr/: __init__.py
src/: main.cpp
src/api/: vlsigr.cpp  vlsigr.hpp
src/router/: cost_model.cpp  cost_model.hpp  grid_graph.hpp  hum.cpp  hum.hpp  ispd_data.cpp  ispd_data.hpp  layer_assignment.cpp  layer_assignment.hpp  patterns.cpp  patterns.hpp  routing_core.cpp  routing_core.hpp  thread_pool.hpp  utils.cpp  utils.hpp
src/tools/: draw.cpp  draw_api.hpp  draw_lib.cpp
tests/: api_test.cpp  cost_model_test.cpp  hum_test.cpp  parser_grid_utils_test.cpp  patterns_test.cpp  routing_core_test.cpp  smoke_basic.cpp
